feat: make draft fragmentation on components

--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <link rel="shortcut icon" href="src/assets/ico/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
       content="Webpack react+typescript boilerplate"
     />
-    <title>Webpack react+typescript boilerplate</title>
+    <title>Covid-19 dashboard</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run RS Lang app.</noscript>
