--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
     crossorigin=""/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Covid-19 dashboard</title>
+    <style type="text/css">
+      .leaflet-container {
+        height: 100%;
+      }
+     </style>
   </head>
   <body>
-     <!-- Make sure you put this AFTER Leaflet's CSS -->
- <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
- integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
- crossorigin=""></script>
     <noscript>You need to enable JavaScript to run RS Lang app.</noscript>
     <div id="app"></div>
   </body>
