--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <title>Covid-19 dashboard</title>
     <style type="text/css">
       .leaflet-container {
-        height: 100%;
+        height: 95%;
+      }
+      .map-container-small {
+        height: 70%;
       }
      </style>
   </head>
