feat: add graph

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
       .map-container-small {
         height: 70%;
       }
+      .recharts-tooltip-wrapper {
+        color: black;
+      }
      </style>
   </head>
   <body>
