--- a/index.html
+++ b/index.html
@@ -2,12 +2,24 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <link rel="shortcut icon" href="src/assets/ico/favicon.ico">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
+    integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
+    crossorigin=""/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta
-      name="description"
-      content="Webpack react+typescript boilerplate"
-    />
-    <title>Webpack react+typescript boilerplate</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <title>Covid-19 dashboard</title>
+    <style type="text/css">
+      .leaflet-container {
+        height: 100%;
+      }
+      .map-container-small {
+        height: 98%;
+      }
+      .recharts-tooltip-wrapper {
+        color: black;
+      }
+     </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run RS Lang app.</noscript>
